add : Text presentation and skills

--- a/index.html
+++ b/index.html
@@ -39,28 +39,106 @@
     </nav>
     <!-- Header-->
     <header id="à-propos" class="masthead text-center text-black py-5 bg-gradient">
-        <div class="masthead-content">
+        <div class="masthead-content pt-lg-5">
             <div class="container px-5">
-                <h1 class="masthead-heading mb-0">À propos</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus dignissimos, earum quasi
-                    totam
-                    pariatur ducimus molestiae ratione, porro magni voluptas rerum nemo repudiandae. Illum minima
-                    quibusdam tempore esse nihil ad.</p>
-                <div class="p-5"><img class="img-fluid rounded-circle" src="assets/img/Kevin-Lavier.jpg"
+                <h1 class="masthead-heading mb-4">À propos</h1>
+                <p class="fs-5">
+                    Je m'appelle Kevin, et je suis développeur web junior, passionné par la création de sites et
+                    d'applications modernes, intuitifs et esthétiques. Issu du milieu du design et de l'art, j'exploite
+                    cette expérience pour imaginer des interfaces qui allient élégance visuelle et ergonomie. J'utilise
+                    également des logiciels de conception graphique et 3D pour enrichir mes projets.
+                </p>
+                <p class="fs-5">
+                    Spécialisé dans des technologies comme <strong>React</strong>, <strong>Firebase</strong>,
+                    <strong>Tailwind CSS</strong>, et <strong>ShadCN</strong>, je combine créativité et rigueur pour
+                    relever
+                    des défis techniques tout en offrant des solutions innovantes.
+                </p>
+                <p class="fs-5">
+                    En parallèle, je suis initiateur en plongée sous-marine, un rôle qui reflète mon engagement dans le
+                    partage des connaissances et la formation. J'aime transmettre mes compétences, que ce soit sous
+                    l'eau ou dans le domaine du développement, pour aider les autres à progresser.
+                </p>
+                <p class="fs-5">
+                    N'hésitez pas à explorer mes projets ou à me contacter pour discuter d'opportunités !
+                </p>
+                <div class="mt-4">
+                    <img class="img-fluid rounded-circle shadow" src="assets/img/Kevin-Lavier.jpg"
                         alt="Portrait Kevin Lavier" />
                 </div>
             </div>
         </div>
+    </header>
+
 
     </header>
 
-    <header id="compétences" class="masthead text-center text-white">
-        <div class="masthead-content">
-            <div class="container px-5">
-                <h1 class="masthead-heading mb-0">Compétences</h1>
+    <header id="compétences" class="masthead py-5 bg-light text-dark">
+        <div class="container px-5">
+            <h1 class="text-center mb-5">Compétences</h1>
+            <div class="row gx-5">
+                <!-- Développement Front-End -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-code"></i> Développement Front-End</h2>
+                    <ul>
+                        <li>Maîtrise de HTML5, CSS3, et JavaScript (ES6).</li>
+                        <li>Utilisation de frameworks comme React.js.</li>
+                        <li>Connaissances en Responsive Design (mobile, tablette, desktop).</li>
+                        <li>Utilisation de bibliothèques comme Bootstrap ou Tailwind CSS.</li>
+                    </ul>
+                </div>
+                <!-- Développement Back-End -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-server"></i> Développement Back-End</h2>
+                    <ul>
+                        <li>Notions de Node.js et Express.js.</li>
+                        <li>Connaissances en bases de données relationnelles (SQL) et non relationnelles (Firebase,
+                            MongoDB).</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row gx-5 mt-4">
+                <!-- Outils et Méthodologies -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-tools"></i> Outils et Méthodologies</h2>
+                    <ul>
+                        <li>Utilisation de Git et GitHub pour le contrôle de version.</li>
+                        <li>Connaissance des environnements de développement (VS Code, Webpack, etc.).</li>
+                        <li>Familiarité avec API RESTful et leur intégration.</li>
+                        <li>Mise en place et déploiement sur GitHub Pages, Firestore</li>
+                    </ul>
+                </div>
+                <!-- Conception UI/UX -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-paint-brush"></i> Conception UI/UX</h2>
+                    <ul>
+                        <li>Création de wireframes et prototypes avec Figma ou Photoshop.</li>
+                        <li>Expérience en graphisme et modélisation 3D.</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row gx-5 mt-4">
+                <!-- Optimisation Web -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-rocket"></i> Optimisation Web</h2>
+                    <ul>
+                        <li>Développement de sites performants avec des temps de chargement optimisés.</li>
+                        <li>Techniques de SEO de base pour améliorer la visibilité des sites.</li>
+                    </ul>
+                </div>
+                <!-- Projets spécifiques -->
+                <div class="col-lg-6">
+                    <h2><i class="fas fa-project-diagram"></i> Projets spécifiques</h2>
+                    <ul>
+                        <li>Création de Progressive Web Apps (PWA).</li>
+                        <li>Développement de sites personnalisés comme des générateurs de menus, des carnets de plongée
+                            ou des portfolios.</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
+
 
 
     <!-- Content section 1-->
