--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#page-top">Kevin Lavier - Junior Dev</a>
+                <a class="navbar-brand" href="#page-top">Kevin Lavier - Web Dev Full Stack</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
                     aria-label="Toggle navigation">
